--- a/latihvue1.html
+++ b/latihvue1.html
@@ -28,7 +28,7 @@
             <img :src="gambarclo" width="20%"> <!-- contoh v-bind: dengan syntax singkat-->
             <h3>Selamat datang, {{namesaja()}}</h3>
             <p>Aplikasi HRM CU Pancur Kasih dengan Golang & Vue JS. <br>
-            Aplikasi ini digunakan untuk mengatur data karyawan KSP CU Pancur Kasih</p>
+            Aplikasi ini digunakan untuk mengatur data karyawan KSP CU Pancur Kasih .</p>
            
         </header>
     
