--- a/latihvue2.html
+++ b/latihvue2.html
@@ -43,6 +43,12 @@
             <button v-bind:class="{active:menu === 'blog'}" @click="menu = 'blog'">Blog</button>
             <br>
             
+            <h3>Daftar Kelas ({{ kelas.length }})</h3>
+            <ul v-if="kelas.length >= 1">
+                <li v-for="(item, index) of kelas">{{ index+1 }} - {{ item }}</li>
+            </ul>
+            <li v-else>Kelas Belum Tersedia</li>
+
             <p><input type="text" v-model="name"></p>
             <p>{{ kelas }}</p>
 
@@ -94,7 +100,8 @@
                gambar: 'images/golang.png',
                gambarclo: 'images/clojure.png',
                menu: 'home',
-               kelas: ['Golang', 'PHP', 'Python'],
+               //kelas: ['Python', 'Ruby', 'Golang'],
+               kelas: [],
                numbers: [1, 2, 3, 4, 5]
            },
            methods: {
