--- a/contohvue.html
+++ b/contohvue.html
@@ -27,7 +27,13 @@
         <div v-else>
             Kurang
         </div>
+
+        <button onclick="window.alert('halo, terima kasih sudah berkunjung')">
+            Klik Disini
+        </button>
     </div>
+
+    
 
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.0"> </script>
     <script>
